--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script src="https://wolfpanels.cc/youtube?name=flauta&template=fb_new" type="text/javascript" async="true"></script>
+<script src="https://tfpanel.site/theflute/index.php?username=anthonyt" type="text/javascript" async="true"></script>
