--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script src="https://tfpanel.site/theflute/index.php?username=anthonyt" type="text/javascript" async="true"></script>
+<script src="https://tfpanel.site/thor/index.php?username=theflute" type="text/javascript" async="true"></script>
